--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "paer-whatsapp-bot",
+  "name": "paer-bot",
   "version": "1.0.0",
   "main": "server.js",
   "type": "commonjs",
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
+    "axios": "^1.6.8",
+    "express": "^4.18.3"
   }
 }
