--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "paer-bot",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "express": "^4.18.3"
+    "axios": "^1.7.9",
+    "express": "^4.19.2"
   }
 }
