--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "axios": "^1.6.7"
+  "axios": "^1.6.7",
+  "discord.js": "^14.16.3",
+  "dotenv": "^16.4.5",
+  "express": "^4.18.2"
   }
 }
+
